--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "mangum>=0.21.0",
+    "passlib[bcrypt]>=1.7.4",
 ]
 
 [project.optional-dependencies]
