--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "better-auth": "^1.0.0",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -42,14 +39,18 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "better-auth": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.562.0",
+    "next": "16.0.10",
     "next-themes": "^0.4.4",
+    "react": "19.2.1",
     "react-day-picker": "^9.4.4",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
@@ -57,19 +58,19 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.2.1",
-    "@hookform/resolvers": "^5.2.2"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5",
+    "autoprefixer": "^10.4.16",
+    "baseline-browser-mapping": "^2.9.19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.10"
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.0.0",
